--- a/PocApi.Services/PocApi.Services.csproj
+++ b/PocApi.Services/PocApi.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PocApi.Business\PocApi.Business.csproj" />
     <ProjectReference Include="..\PocApi.DTOs\PocApi.DTOs.csproj" />
   </ItemGroup>
 
