--- a/PocApi/appsettings.json
+++ b/PocApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-AP1L6BJD\\SQL2022;Database=PocApiDb;User Id=sa;Password=123456"
+  },
+  "AppSettings": { "Token": "e729b90d-9d80-4490-aee3-4c3d9cb04bbf" }
 }
