Injetando a dependencia repository na business

--- a/PocApi.Business/PocApi.Business.csproj
+++ b/PocApi.Business/PocApi.Business.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PocApi.Data\PocApi.Data.csproj" />
     <ProjectReference Include="..\PocApi.DTOs\PocApi.DTOs.csproj" />
   </ItemGroup>
 
