Criando novo banco de dados

--- a/PocApi/appsettings.json
+++ b/PocApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-AP1L6BJD\\SQL2022;Database=PocApiDb;User Id=sa;Password=123456"
+    "DefaultConnection": "Server=LAPTOP-AP1L6BJD\\SQLEXPRESS;Database=PocApiDb;Trusted_connection=true;"
   },
-  "AppSettings": { "Token": "e729b90d-9d80-4490-aee3-4c3d9cb04bbf" }
+  "AppSettings": { "Token": "06ec0f45-f158-4503-8fa1-f768f05056f5" }
 }
