--- a/PocApi.Data/PocApi.Data.csproj
+++ b/PocApi.Data/PocApi.Data.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Folder Include="Context\" />
-    <Folder Include="EntityConfiguration\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PocApi.DTOs\PocApi.DTOs.csproj" />
     <ProjectReference Include="..\PocApi.Entities\PocApi.Entities.csproj" />
   </ItemGroup>
 
